[1.9][&1.8] Issue 4489: Wrong font-size in main panel under Windows
http://code.google.com/p/fbug/source/detail?r=11431

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -111,6 +111,7 @@
     position: absolute;
     z-index: 1;
     color: silver;
+    bottom: 0;
 }
 
 .fbCommandHtmlBox .offScreen {
